syntax = "proto3";

option csharp_namespace = "Sep3DataTier";

service Auth
{
  rpc Register(RegisterUserInput) returns (UserOutput);
  rpc LoginUser(LoginUserInput) returns (UserOutput);
}

message RegisterUserInput
{
  string username = 1;
  string email = 2;
  string password = 3;
}

message UserOutput
{
  int32 id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string role = 5;
}

message LoginUserInput
{
  string email=1;
  string password=2;
}